--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,6 +70,10 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+body {
+  max-width: fit-content;
+}
+
 .blogPostTitle_node_modules-\@docusaurus-theme-classic-lib-next-theme-BlogPostItem-styles-module
   a {
   color: var(--chakra-colors-gray-800);
